k8s/presupuesto-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: presupuesto-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: presupuesto
  template:
    metadata:
      labels:
        component: presupuesto
    spec:
      containers:
        - name: presupuesto
          image: josefvivas/demo-presupuesto
          ports:
            - containerPort: 4000
