k8s/servicios-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: servicios-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: servicios
  template:
    metadata:
      labels:
        component: servicios
    spec:
      containers:
        - name: servicios
          image: josefvivas/demo-servicios
          ports:
            - containerPort: 4003
