k8s/presupuesto-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: presupuesto-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: presupuesto
  ports:
    - port: 4000
      targetPort: 4000
