k8s/servicios-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: servicios-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: servicios
  ports:
    - port: 4003
      targetPort: 4003
