k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: web-cluster-ip-service
                port:
                  number: 3000
          - path: /api-auth/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-cluster-ip-service
                port:
                  number: 4001
          - path: /api-presupuesto/?(.*)
            pathType: Prefix
            backend:
              service:
                name: presupuesto-cluster-ip-service
                port:
                  number: 4000
          - path: /api-servicios/?(.*)
            pathType: Prefix
            backend:
              service:
                name: servicios-cluster-ip-service
                port:
                  number: 4003
